Fix top of image not visible

--- a/src/frontend/app/file-viewer/file-viewer.component.scss
+++ b/src/frontend/app/file-viewer/file-viewer.component.scss
@@ -8,7 +8,7 @@
 .modal-content {
     padding: 1rem;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     height: 100%;
     overflow-y: scroll;
